make tracker text black

--- a/public/tracker.html
+++ b/public/tracker.html
@@ -150,7 +150,7 @@ input {
 </section>
 <div id="myDIV" class="headerDIV">
   <h2 style="margin:5px">My Pregnant Notes</h2>
-  <input type="text" id="myInput" placeholder="Title...">
+  <input type="text" id="myInput" placeholder="New Task or Events..." style="color: black;">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
 
